# SeminarFelder

anschlag/: felder.tex
buch/: buch.fdb_latexmk  buch.fls  buch.ilg  buch.ind  paper.fdb_latexmk  paper.fls  paper.ilg
buch/chapters/: references.bib  vorwort.tex
buch/chapters/000-einleitung/: 1-feldbegriff.tex  2-mathematik.tex  3-buch.tex  4-quellen.tex  chapter.tex
buch/chapters/010-fallstudie/: 1-temperatur.tex  2-waermekapazitaet.tex  3-waermefluss.tex  4-prinzipal.tex
buch/chapters/020-koordinaten/: 1-koordinaten.tex  2-tangentialvektoren.tex  3-differentialoperatoren.tex  4-diffmannig.tex  chapter.tex
buch/chapters/030-kurvenintegral/: 1-1formen.tex  2-kurvenintegral.tex  3-differential.tex  4-zerlegung.tex  chapter.tex  parabel.maxima
buch/chapters/040-green/: 1-2vektoren.tex  2-tensoren.tex  3-flaechenintegral.tex  4-green.tex  5-geschlossen.tex  chapter.tex
buch/chapters/050-gauss/: 1-gauss3d.tex  2-gauss.tex  3-erhaltungssatz.tex  chapter.tex
buch/chapters/060-pformen/: 1-pformen.tex  2-differential.tex  3-abbildungen.tex  4-poincare.tex  chapter.tex
buch/chapters/070-hodge/: 1-hodge.tex  2-koordinatenfrei.tex  3-vektoranalysis.tex  5-laplace.tex  (+2 more)
buch/common/: chaptername.tex  teilnehmer.tex
buch/papers/: uebersicht.tex
buch/papers/mongekant/code/: README.md  adaption.py  bary2d.py  dist.py  pyproject.toml
buch/tools/: Makefile  chapters.c  farbseiten.sh
cover/: Makefile  back.fdb_latexmk  back.fls  buchcover.fdb_latexmk  buchcover.fls  buchcover.tex  front.fdb_latexmk  front.fls  front.tex  ruecken1.tex  ruecken2.tex  teilnehmer.tex
(+226 files in other folders)
