[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pot>=0.9.5",
    "pyqt5>=5.15.11",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
]

[dependency-groups]
dev = [
    "ruff>=0.11.11",
]
